update with 2 changes

--- a/note/rust.html
+++ b/note/rust.html
@@ -82,10 +82,10 @@
 </div>
 </div>
 <p>
-러스트(Rust)는 프로그래밍 언어 중 하나로 최근에 가장 주목을 받고 있는 언어다.
-주로 컴파일이 필요한 시스템 소프트웨어를 개발하기 위한 목적의 언어로 개발되었으며
-초기에는 모질라 재단의 프로젝트에서 활용되다가,
-특유의 메모리 관리의 우수성을 인정 받아서 여기저기에서 활발하게 채용되기 시작한 언어다.
+러스트(Rust)는 컴퓨터 프로그래밍 언어 중 하나다.
+주로 컴파일이 필요한 시스템 소프트웨어를 개발하기 위한 목적의 언어로 개발되었다.
+초기에는 모질라 재단의 프로젝트에서 활용되었으며
+독창적인 메모리 관리 체계의 우수성을 인정 받아서 다양한 프로젝트의 메인 언어로 활발하게 채용되고 있다.
 </p>
 
 <div id="outline-container-4d08a6c8" class="outline-2">
@@ -402,7 +402,7 @@ Rust는 좀 특이한 방식으로 레퍼런스의 소유권을 관리한다.
 </pre>
 </div>
 <p>
-위 코드는 some<sub>function</sub> 함수가 s1 을 소유하게 된다.
+위 코드는 <code>some_function</code> 함수가 s1 을 소유하게 된다.
 그리고 이 함수가 종료될 때 s1 도 같이 사라지게 된다.
 </p>
 
@@ -414,7 +414,7 @@ Rust는 좀 특이한 방식으로 레퍼런스의 소유권을 관리한다.
 </pre>
 </div>
 <p>
-위 코드에서 s1 은 another<sub>function</sub> 함수로 소유권이 넘어갔다가 반환되면서 다시 현재 스코프로 소유권이 반환된다.
+위 코드에서 s1 은 <code>another_function</code> 함수로 소유권이 넘어갔다가 반환되면서 다시 현재 스코프로 소유권이 반환된다.
 물론 이 함수 내부에서 입력 받은 매개변수를 그대로 반환했을 경우이긴 하지만 말이다.
 </p>
 
