update with 9 changes

--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Doom Emacs</h1>
-<div class="title-date">2020년 5월 9일 수정</div>
+<div class="title-date">2020년 5월 25일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -466,6 +466,8 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 추후 수정될 가능성 있음.</dd>
 <dt><code>SPC m e b</code></dt><dd>버퍼 전체 실행하기(eval buffer). 이건 잘 돌아감.</dd>
 <dt><code>S b</code></dt><dd>선택 영역을 괄호(braces)로 둘러싸기</dd>
+<dt><code>z M</code></dt><dd>모든 헤드라인 폴딩</dd>
+<dt><code>z R</code></dt><dd>모든 헤드라인 폴딩 열기</dd>
 </dl>
 </div>
 </div>
@@ -579,7 +581,7 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
-2020년 5월 15일 수정</div>
+2020년 5월 20일 수정</div>
 </div>
 </div>
 <div class="article-link">
