update with 8 changes

--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -406,13 +406,9 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 <h3 id="af57ec51">점프(Jump)</h3>
 <div class="outline-text-3" id="text-af57ec51">
 <dl class="org-dl">
-<dt><code>f [character]</code></dt><dd>해당 문자로 점프(vim, evil)</dd>
-<dt><code>F [character]</code></dt><dd>해당 문자로 역방향 점프(vim, vil)</dd>
 <dt><code>t [character]</code></dt><dd>해당 문자로 점프(evil-snipe)</dd>
 <dt><code>s [characters]</code></dt><dd>문자 완성 형식으로 해당 문자열로 점프(evil-snipe)</dd>
 <dt><code>S [characters]</code></dt><dd>문자 완성 형식으로 해당 문자열로 역방향 점프(evil-snipe)</dd>
-<dt><code>;</code></dt><dd>계속 점프 (vim, evil)</dd>
-<dt><code>,</code></dt><dd>이전으로 점프 (vim, evil)</dd>
 <dt><code>g s j</code></dt><dd>표시된 문자를 입력한 위치로 아래방향 점프(evil-easymotion)</dd>
 <dt><code>g s k</code></dt><dd>표시된 문자를 입력한 위치로 아래방향 점프(evil-easymotion)</dd>
 <dt><code>g s SPC</code></dt><dd>키보드로 입력하는 글자 위치로 점프(avy)</dd>
@@ -577,6 +573,13 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/vim.html">Vim</a></h2>
+<div class="article-link-date">
+2020년 5월 25일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
