--- a/note/vim.html
+++ b/note/vim.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Vim</h1>
-<div class="title-date">2020년 4월 15일 수정</div>
+<div class="title-date">2020년 5월 25일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -71,6 +71,12 @@
 <li><a href="#5a0cac4b">클립보드</a></li>
 </ul>
 </li>
+<li><a href="#cedae0c3">단축키</a>
+<ul>
+<li><a href="#aa181c70">커서 이동</a></li>
+<li><a href="#3e9441be">점프</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -78,6 +84,11 @@
 vi 에디터는 아주 오래전 UNIX 용 편집기로 탄생한 텍스트 에디터다.
 그리고 Vim(Vi Improved)은 vi 에디터의 발전된 버전으로
 일단은 vi 와 Vim은 같지 않다 라고 보는 게 정석이다.
+</p>
+
+<p>
+<a href="emacs.html">Emacs</a> 혹은 <a href="doom-emacs.html">Doom Emacs</a>, <a href="spacemacs.html">Spacemacs</a>
+등등에서 사용되는 evil 확장도 거의 동일한 키맵을 사용하니 이 문서를 참조할 수 있다.
 </p>
 
 <div id="outline-container-d9e005b4" class="outline-2">
@@ -235,6 +246,33 @@ neovim 등에서는 안 되는 경우도 있으니 주의하자.
 </div>
 </div>
 </div>
+<div id="outline-container-cedae0c3" class="outline-2">
+<h2 id="cedae0c3">단축키</h2>
+<div class="outline-text-2" id="text-cedae0c3">
+</div>
+<div id="outline-container-aa181c70" class="outline-3">
+<h3 id="aa181c70">커서 이동</h3>
+<div class="outline-text-3" id="text-aa181c70">
+<dl class="org-dl">
+<dt><code>C-f</code></dt><dd>한 페이지 아래로 스크롤</dd>
+<dt><code>C-b</code></dt><dd>한 페이지 위로 스크롤</dd>
+<dt><code>C-d</code></dt><dd>반 페이지 아래로 스크롤</dd>
+<dt><code>C-u</code></dt><dd>반 페이지 위로 스크롤</dd>
+</dl>
+</div>
+</div>
+<div id="outline-container-3e9441be" class="outline-3">
+<h3 id="3e9441be">점프</h3>
+<div class="outline-text-3" id="text-3e9441be">
+<dl class="org-dl">
+<dt><code>f [character]</code></dt><dd>해당 문자로 점프</dd>
+<dt><code>F [character]</code></dt><dd>해당 문자로 역방향 점프</dd>
+<dt><code>;</code></dt><dd>계속 점프</dd>
+<dt><code>,</code></dt><dd>이전으로 점프</dd>
+</dl>
+</div>
+</div>
+</div>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
@@ -252,7 +290,7 @@ neovim 등에서는 안 되는 경우도 있으니 주의하자.
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 5월 9일 수정</div>
+2020년 5월 25일 수정</div>
 </div>
 </div>
 <div class="article-link">
