update with 13 changes

--- a/note/rust.html
+++ b/note/rust.html
@@ -92,8 +92,8 @@
 </p>
 
 <p>
-이후로 이어지는 글들은 <a href="swift.html">Swift</a> 언어를 좋아하는 사람이 작성한 거라
-비교를 조금씩 하고 있다는 것에 유의하자.
+이후로 이어지는 글들은 <a href="swift.html">Swift</a> 언어를 좋아하는 사람이 작성한 거라 비교를 조금씩 하고 있다는 것에 유의하자.
+치트시트 형태로 나열하는 것이 목표였던 글이라 일부 코드는 검증되지 않아서 오류가 있을 수 있다는 점도 유의하자.
 </p>
 
 <div id="outline-container-4d08a6c8" class="outline-2">
