update with 4 changes

--- a/note/english-note.html
+++ b/note/english-note.html
@@ -213,7 +213,7 @@ You are in a car
 <dt>get rid of</dt><dd>'없애다, 치우다, 사라지게 하다'의 의미다. 더이상 필요없는 것을 치우다는 의미와 가깝다.</dd>
 <dt>grounded</dt><dd>감금되다. 외출금지 되다. (땅에 박혔다고 보면 되려나?)</dd>
 <dt>at a glance</dt><dd>한눈에, 즉시. (glance는 흘낏 보다, 휙 보다 등의 의미)</dd>
-<dt>caveats</dt><dd>가끔 문서 등에 이게 써 있으면 '경고' 혹은 '전제조건' 등을 의미합니다. 주의하라는 거죠.</dd>
+<dt>caveats</dt><dd>가끔 문서 등에 이게 써 있으면 '경고' 혹은 '전제조건' 등을 의미한다. 즉 주의하라는 의미다.</dd>
 <dt>no such thing as ()</dt><dd>세상에 () 그런 건 없어.</dd>
 </dl>
 </div>
